--- a/css/style-ku.css
+++ b/css/style-ku.css
@@ -10,16 +10,12 @@ body{
 	background-color: #52dc90;
 	color: #fff;
 	box-shadow: 0 0 7px 0px #52dc90;
-	border: 1px solid#53dc90;
+	border: 1px solid #53dc90;
 }
 .bg-blue{
 	background-color: #55a8fd ;
 	color: #fff;
 	box-shadow: 0 0 7px 0px #55a8fd ;
-	border: 1px solid #55a8fd ;
-}
-.bg-blue{
-	color : #fff ;
 	border: 1px solid #55a8fd ;
 }
 
@@ -36,11 +32,11 @@ body{
 }
 .button{
 	position: relative;
-	padding: 15px 30px 15px 30px;
+	padding: 10px 25px 10px 25px;
 	text-decoration: none;
 	display: inline-block;
 	margin-right: 15px;
-	border-radius: 3px;
+	border-radius: 4px;
 }
 
 /* navbar */
@@ -49,7 +45,7 @@ nav{
 	width: 100%;
 	height : 60px;
 	background-color: #fff;
-	box-shadow: -1px -7px
+	box-shadow: -1px -2px 20px 0px #888;
 }
 nav ul{
 	position: relative;
@@ -67,10 +63,9 @@ nav ul li a{
 	text-decoration: none;
 	color: #888;
 	font-family: 'Helvetica', sans-serif;
-	font-size: 14px;
 }
 nav ul li a:hover{
-	color: #55a8fd;
+	color:rgb(21, 220, 255)
 }
 .menu-mobile{
 	position: relative;
@@ -86,7 +81,7 @@ nav ul li a:hover{
 	border: 1px solid #888;
 }
 /*profile section */
-#box-profile{
+section#box-profile{
 	position: relative;
 	width: 80%;
 	min-height: 250px;
@@ -97,7 +92,7 @@ nav ul li a:hover{
 	background-color: #B0E0E6;
 	box-shadow: 0 0 7px 0px rgba(136,136,136,0.2);
 }
-.img-profile{
+#box-profile .img-profile{
 	position: relative;
 	display: inline-block;
 	width: 200px;
@@ -107,7 +102,7 @@ nav ul li a:hover{
 	top: 25px;
 	margin-left: 40px;
 }
-.photo{
+.img-profile .photo{
 	height: 100%;
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -125,13 +120,10 @@ nav ul li a:hover{
 	border-right: : : 1px solid #efefef;
 }
 .description h1{
-	font-size: 32px;
+	font-size: 30px;
 	margin-bottom: 14px;
 }
 .description p{
-	color: #888;
-}
-.description .button{
 	margin-top: 40px;
 }
 .information{
@@ -140,8 +132,7 @@ nav ul li a:hover{
 	float: right;
 	font-family: 'Helvetica', sans-serif;
 	top: 45px;
-	margin-left: 30px;
-	margin-top: -160px;
+	margin-left: -20px;
 }
 .information .data{
 	display: block;
@@ -165,7 +156,7 @@ section#input-form{
 	margin-top: 60px;
 	border-radius: 6px;
 	background-color: #fff;
-	box-shadow: 0 0 7px rgba(136,146,146, 0.2);
+	box-shadow: 0 0 7px rgba(136,146,146, 0.4);
 	padding: 30px;
 }
 #input-form .form{
@@ -189,4 +180,120 @@ input{
 	margin-top: 5px;
 	margin-bottom: 5px;
 	font-size: 16px;
+}
+
+/* reponsive di layar mobile middle */
+@media(min-width: 321px) and (max-width: 640px){
+	section#box-profile{
+		width: 90%;
+		height: 630px;
+		margin-left: 5%;
+		margin-right: 5%;
+		margin-top: 30px;
+	}
+	.menu-mobile{
+		top: 20px;
+		right: 10%;
+		display: inline-block;
+	}
+	nav ul{
+		display: none;
+		right: 0;
+		width: 100%;
+		text-align: center;
+		top: 43px;
+		z-index: 99;
+		background: #fff;
+	}
+	nav ul li{
+		float: unset;
+		margin: 0;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.description{
+		padding-left: 0px;
+		width: 100%;
+		text-align: center;
+		margin-left: 0;
+		border: none;
+	}
+	.description .button{
+		margin-right: 10px;
+		margin-left: 10px;
+	}
+	.img-profile .photo{
+		left: 35px;
+		position: relative;
+	}
+	.information{
+		top: 75px;
+		margin-left: 25px;
+		font-size: 14px;
+	}
+	section#input-form{
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+
+	/* responsive mobile small */
+	@media screen and (max-width: 320px){
+		section#box-profile{
+			width: 90%;
+			height: 760px;
+			margin-left: 5%;
+			margin-right: 5%;
+			margin-top: 30px;
+		}
+		.menu-mobile{
+			top: 20px;
+			right: 10%;
+			display: inline-block;
+		}
+		nav ul{
+			display: none;
+			right: 0;
+			width: 100%;
+			text-align: center;
+			top: 43px;
+			z-index: 99;
+			background: #fff;
+		}
+		nav ul li{
+			float: unset;
+			margin: 0;
+			padding-top: 10px;
+			padding-bottom: 10px;
+		}
+		.description{
+			padding-left: 30px;
+			width: 90%;
+			text-align: center;
+			margin-left: 0;
+		}
+		.description .button{
+			padding: 10px 25px 10px 25px;
+			margin-right: 10px;
+			margin-left: 10px;
+		}
+		.img-profile .photo{
+			left: 10px;
+			position: relative;
+		}
+		.information{
+			top: 10px;
+			margin-left: 25px;
+			font-size: 14px;
+		}
+		.information .data{
+			height: 48px;
+		}
+		.information p.field{
+			width: 95px;
+		}
+		section#input-form{
+			margin-left: 5%;
+			margin-right: 5%;
+		}
+	}
 }
